Subscribe to topic

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,3 +22,9 @@ org.gradle.parallel=true
 android.useDeprecatedNdk=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Added by Tumppi: https://facebook.github.io/react-native/docs/signed-apk-android
+MYAPP_RELEASE_STORE_FILE=ntfy-demo.keystore
+MYAPP_RELEASE_KEY_ALIAS=ntfy-demo-key
+MYAPP_RELEASE_STORE_PASSWORD=passu12
+MYAPP_RELEASE_KEY_PASSWORD=passu12
